--- a/styles/architect.css
+++ b/styles/architect.css
@@ -120,9 +120,60 @@ main {
     font-weight: 700;
 }
 
+/* Features Section */
+
+.features {
+    margin-top: 130px;
+    display: flex;
+    gap: 146px;
+}
+
+.feature-content .section-title {
+    border-left: 5px solid #FF900E;
+    padding-left: 21px;
+}
+
+.feature-content .card {
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.feature-img img{
+    height: 90%;
+    margin-left: 92px;
+}
+
+.ten-years-badge {
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    width: 342px;
+    padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 92px;
+}
+
+.ten-years-badge h2 {
+    font-size: 4rem;
+    margin: 0;
+}
+
+.ten-years-badge p{
+    font-size: 1.5rem;
+}
+
 /* Facts Section */
 
-.facts-card-container{
+.facts {
+    margin-top: 130px;
+}
+
+.facts-card-container {
+    margin-top: 100px;
     display: flex;
     justify-content: space-around;
 }
@@ -134,17 +185,35 @@ main {
     padding: 40px 30px;
 }
 
-.facts-card-container .card-title{
+.facts-card-container .card-title {
     font-size: 1.5rem;
     font-weight: 600;
     margin-top: 5px;
 }
 
-.facts-card-container .card-stats{
+.facts-card-container .card-stats {
     font-size: 2.8rem;
     color: #424242;
     margin-top: 10px;
     margin-bottom: 10px;
+}
+
+/* Sponsors Styles */
+
+.sponsors {
+    text-align: center;
+}
+
+.sponsors-img-container {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+}
+
+.sponsors-img-container img {
+    width: 165px;
 }
 
 /* Responsive Styles */
@@ -155,7 +224,10 @@ main {
     }
 
     nav,
-    .teams-container {
+    .teams-container,
+    .features,
+    .facts-card-container,
+    .sponsors-img-container {
         flex-direction: column;
     }
 
@@ -163,20 +235,37 @@ main {
         grid-template-columns: 1fr;
     }
 
-    .teams-content {
+    .feature-img img{
+        width: 90%;
+        margin-left: 0;
+    }
+
+    .ten-years-badge{
+        position: static;
+        max-width: 300px;
+    }
+
+    .teams-content,
+    .facts-card-container {
         padding-left: 20px;
         padding-right: 20px;
+    }
+
+    .facts-card-container {
+        gap: 20px;
     }
 }
 
 /* Tablet/Medium Devices */
-@media screen and (min-width: 576px) and (max-width: 992) {
+@media screen and (min-width:576px) and (max-width: 960px) {
     header {
         padding: 50px;
     }
 
     nav,
-    .teams-container {
+    .features,
+    .teams-container,
+    .sponsors-img-container {
         flex-direction: column;
     }
 }
